--- a/webfiles/frontend/src/pages/components/ProductBar.css
+++ b/webfiles/frontend/src/pages/components/ProductBar.css
@@ -18,6 +18,7 @@
     transition: transform 0.2s;
     flex: 1 1 200px;
     max-width: 200px;
+    overflow: hidden;
   }
   
   .product-image {
@@ -30,5 +31,6 @@
   .product-info {
     text-align: center;
     margin-top: 5px;
+    padding: 5px;
   }
   
