--- a/webfiles/frontend/src/pages/styles/login.css
+++ b/webfiles/frontend/src/pages/styles/login.css
@@ -1,5 +1,5 @@
 .login-container {
-    width: 300px;
+    width: 350px;
     margin: 50px auto;
     padding: 20px;
     border-radius: 8px;
@@ -15,7 +15,7 @@
 
   .banner {
     background-color: rgba(118, 154, 201, 0.362);
-    padding: 15px;
+    padding: 5px;
     text-align: center;
     border-radius: 8px;
     margin-bottom: 20px;
@@ -48,6 +48,23 @@
     cursor: pointer;
   }
   
+  form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  form div {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  form label {
+    margin-bottom: 5px;
+  }
+
   button:hover {
     background-color: #1f1f1f;
   }
