--- a/webfiles/frontend/src/pages/components/sidebar.css
+++ b/webfiles/frontend/src/pages/components/sidebar.css
@@ -1,12 +1,12 @@
 .sidebar {
     width: 250px;
-    height: calc(100vh - 89px);
+    height: 100%;
     background-color: #282c34;
     color: white;
     padding: 1rem;
     position: fixed;
     left: 0;
-    top: 89px;
+    top: 80px;
     box-shadow: 2px 0 8px rgba(0, 0, 0, 0.15);
   
     h2 {
